--- a/contactus.html
+++ b/contactus.html
@@ -19,20 +19,24 @@
                     <a href="./index.html"><img class="menu-logo" src="./img/logo.png" alt="Gallery item" /></a>
                 </div>
                 <div class="menu__top-right">
-                    <a title="menu" href="./menu.html" class="menu-text"> MENU</a> <span class="menu__circle"></span>
+                    <a title="menu" href="./menu.html" class="menu-text">MENU</a>
                 </div>
             </div>
         </div>
     </header>
-    <main class="homepage">
-        <section class="mainpage">
+    <main class="contactpage">
+        <section class="contactus">
             <div class="container">
-                <div class="mainpage__content">
-                    <h2 class="mainpage__content-title"> Make <br>your story worth <br>watching <span class="dot_circle"></span> </h2>
-                    <a data-hover="View all works" href="#" class="btn-without-border">View all works<i><img
-                     src="./img/Vector 1.png"
-                    alt="white-line" class=line /><span class="btn__circle"></span> </i>
-                    </a>
+                <div class="contactus__content">
+                    <h2 class="contactus__content-title"> Ready to tell your story ? </h2>
+                </div>
+                <div class="contactus__content-item">
+                    <p class="top">Contact Us</p>
+                    <p class="emailphone">hello@sixseconds.studio &emsp;|&emsp; (+84)939 80 44 88</p>
+                    <p class="gray">F Central 16A Le HongPhong St., Dist. 10, HCMC</p>
+                    <i class="fa fa-facebook-official" aria-hidden="true" style="color: white;"></i>
+                    <i class="fa fa-instagram" aria-hidden="true" style="color: white;"></i>
+                    <i class="fa fa-linkedin" aria-hidden="true" style="color: white;"></i>
                 </div>
             </div>
         </section>
